--- a/main.html
+++ b/main.html
@@ -11,6 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+
+	<image src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcS4ozIxHA83mBFYu_zaWnLgfiXrilxNdzDOaxtsTu5AMTqRAlB3" alt="elephant">elephant</image>
+	
 </body>
 
 </html>
